# Showcase

./: CMakeLists.txt  Init.py  InitGui.py  README.md  ShowcaseMod.dox
App/: AppShowcaseMod.cpp  AppShowcaseModPy.cpp  CMakeLists.txt  PreCompiled.h
Gui/: Actions.h  AppShowcaseModGui.cpp  AppShowcaseModGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
